# pequod-reader

./: Cargo.toml  LICENSE  README.md
src/: app.rs  local_storage.rs  main.rs  tui.rs
