[package]
name = "pequod-reader"
version = "0.1.0"
description = "A single-page TUI RSS reader"
authors = ["Trevor Bonas <trevorbonas@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
futures = "0.3.31"
log = "0.4.29"
ratatui = "0.30.0"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
signal-hook = "0.4.3"
textwrap = "0.16.2"
tokio = { version = "1.49.0", features = ["time", "macros", "rt"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
