[package]
name = "pequod-reader"
version = "0.1.0"
description = "A single-page TUI RSS reader"
authors = ["Trevor Bonas <trevorbonas@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
feed-rs = "2.3.1"
futures = "0.3.31"
html2text = "0.16.7"
log = "0.4.29"
open = "5.3.3"
ratatui = "0.30.0"
reqwest = "0.13.1"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
signal-hook = "0.4.3"
textwrap = "0.16.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
unicode-width = "0.2.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
