[package]
name = "pequod-reader"
version = "0.1.0"
description = "A single-page TUI RSS reader"
authors = ["Trevor Bonas <trevorbonas@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.59", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
directories = "6.0.0"
feed-rs = "2.3.1"
futures = "0.3.31"
html2text = "0.16.7"
log = "0.4.29"
open = "5.3.3"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
rusqlite = { version = "0.38.0", features = ["chrono", "bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
signal-hook = "0.4.3"
tempfile = "3.25.0"
textwrap = "0.16.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
unicode-width = "0.2.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
